<resources>
    <string name="app_name">ProtoCodeTest</string>
    <string name="phone_hint">Phone Number</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="our_lpg_products">Our LPG Products</string>
    <string name="our_accessories">Accessories</string>
    <string name="your_order">Your Order</string>
    <string name="proto_logo">Proto logo</string>
    <string name="have_account">Have account?</string>
    <string name="login_failed">Login failed. Please retry</string>
    <string name="registration_failed">Something went wrong. Please try again</string>
    <string name="registration_successful">Successfully registered. Please log in</string>
    <string name="outright_purchase_label">Outright Purchase</string>
    <string name="outright_purchase_description">An outright product means a sold product where the customer buys both the cylinder and the gas. Enter order details below.</string>
    <string name="refill_label">Refill</string>
    <string name="refill_description">In any refill cylinder sold out, we expect a return cylinder of the same size and same quantity of issued filled cylinder(s) sold out. Enter order details below.</string>
    <string name="_6_kg_label">6Kg :</string>
    <string name="_6_kgs_hint">6Kgs</string>
    <string name="_13_kg_label">13Kg :</string>
    <string name="_13_kg_hint">13Kg</string>
    <string name="meko_grill_6kg">Meko Grill 6KG @400:</string>
    <string name="_6kg_meko_grill_hint">6KG meko grill</string>
    <string name="meko_grill_13kg">Meko Grill 13KG @700:</string>
    <string name="_13kg_meko_grill_hint">13KG meko grill</string>
    <string name="cooker">Cooker @1500:</string>
    <string name="cooker_hint">Cooker</string>
    <string name="regulator">Regulator @300:</string>
    <string name="regulator_hint">Regulator</string>
    <string name="flame_description">Flame</string>
    <string name="make_order">Make Order</string>
    <string name="confirm_order">Confirm order</string>
    <string name="order_total">Hello. The order total is %d.</string>
    <string name="order_quantity">Qt: %d.</string>
    <string name="item_total">Ksh. %d.</string>
    <string name="this_is_a_dril">This is a drill!</string>
    <string name="order_cannot_empty">Order cannot be empty</string>
</resources>