<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/dest_login_fragment">

    <fragment
        android:id="@+id/dest_login_fragment"
        android:name="com.droidafricana.protocodetest.login.LoginFragment"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_dest_login_fragment_to_dest_register_fragment"
            app:destination="@id/dest_register_fragment" />
        <action
            android:id="@+id/action_dest_login_fragment_to_dest_lpg_products_fragment"
            app:destination="@id/dest_lpg_products_fragment" />
    </fragment>

    <fragment
        android:id="@+id/dest_register_fragment"
        android:name="com.droidafricana.protocodetest.login.RegisterFragment"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_dest_register_fragment_to_dest_login_fragment"
            app:destination="@id/dest_login_fragment" />
    </fragment>

    <fragment
        android:id="@+id/dest_lpg_products_fragment"
        android:name="com.droidafricana.protocodetest.main.LPGProductsFragment"
        android:label="@string/our_lpg_products"
        tools:layout="@layout/fragment_lpg_products" >
        <action
            android:id="@+id/action_dest_lpg_products_fragment_to_dest_accessories_fragment"
            app:destination="@id/dest_accessories_fragment" />
        <action
            android:id="@+id/action_dest_lpg_products_fragment_to_dest_order_summary_fragment"
            app:destination="@id/dest_order_summary_fragment" />
    </fragment>

    <fragment
        android:id="@+id/dest_accessories_fragment"
        android:name="com.droidafricana.protocodetest.main.AccessoriesFragment"
        android:label="@string/our_accessories"
        tools:layout="@layout/fragment_accessories" >
        <action
            android:id="@+id/action_dest_accessories_fragment_to_dest_order_summary_fragment"
            app:destination="@id/dest_order_summary_fragment" />
    </fragment>

    <fragment
        android:id="@+id/dest_order_summary_fragment"
        android:name="com.droidafricana.protocodetest.main.OrderSummaryFragment"
        android:label="@string/your_order"
        tools:layout="@layout/fragment_order_summary" />
</navigation>