<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <androidx.cardview.widget.CardView
        android:id="@+id/outright_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4"
        app:cardCornerRadius="@dimen/margin_12"
        app:layout_constraintBottom_toTopOf="@+id/refill_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_8">

            <TextView
                android:id="@+id/outright_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/outright_purchase_label"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_18"
                app:drawableEndCompat="@drawable/ic_flame"
                app:drawableStartCompat="@drawable/ic_flame" />

            <TextView
                android:id="@+id/outright_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/outright_purchase_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <include
                layout="@layout/order_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/refill_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4"
        app:cardCornerRadius="@dimen/margin_12"
        app:layout_constraintBottom_toTopOf="@+id/accessory_fab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outright_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/refill_label"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_18"
                app:drawableEndCompat="@drawable/ic_flame"
                app:drawableStartCompat="@drawable/ic_flame" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/refill_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <include
                layout="@layout/order_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/accessory_fab"
        style="@style/ForwardFabStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/refill_layout"
        app:srcCompat="@drawable/ic_arrow_forward" />

</androidx.constraintlayout.widget.ConstraintLayout>